Fixed overflow issue on landing page and media platform

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -5,6 +5,10 @@ body {
   margin: 0;
 }
 
+div {
+  overflow-x: hidden;
+}
+
 #logo {
   font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
   cursor: pointer;
@@ -51,6 +55,7 @@ h2.about-header {
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
+  overflow: hidden;
 }
 /* About Page */
 .aboutPage {
@@ -74,11 +79,12 @@ h2.about-header {
 
 .milservMedia {
   width: 100%;
-  height: 300px;
+  height: 500px;
   background-image: url("../images/landing-image.jpg");
-  background-size: auto !important;
+  background-size: cover !important;
   background-repeat: no-repeat;
   background-attachment: fixed;
+  overflow: hidden;
 }
 
 input.form-control.search-form {
@@ -352,11 +358,12 @@ span.navbar-toggler-icon {
 }
 
 .card {
-  margin: 0.5rem 0.5rem !important;
+  margin: 0.5rem 0 !important;
   font-weight: bold !important;
   height: 285px !important;
+
   /* min-height: 165.9px !important; */
-  min-width: 285px !important;
+  min-width: 250px !important;
   /* min-width: 165.9px !important; */
   color: #ffffff !important;
   border-radius: 1px !important;
